@@ -18,6 +18,7 @@ src/gui/auxiliary/widget_definition/listbox.cpp
 src/gui/auxiliary/widget_definition/minimap.cpp
 src/gui/auxiliary/widget_definition/multi_page.cpp
 src/gui/auxiliary/widget_definition/panel.cpp
+src/gui/auxiliary/widget_definition/progress_bar.cpp
 src/gui/auxiliary/widget_definition/repeating_button.cpp
 src/gui/auxiliary/widget_definition/scrollbar_panel.cpp
 src/gui/auxiliary/widget_definition/scroll_label.cpp
@@ -43,6 +44,7 @@ src/gui/auxiliary/window_builder/listbox.cpp
 src/gui/auxiliary/window_builder/minimap.cpp
 src/gui/auxiliary/window_builder/multi_page.cpp
 src/gui/auxiliary/window_builder/panel.cpp
+src/gui/auxiliary/window_builder/progress_bar.cpp
 src/gui/auxiliary/window_builder/password_box.cpp
 src/gui/auxiliary/window_builder/repeating_button.cpp
 src/gui/auxiliary/window_builder/scrollbar_panel.cpp
@@ -89,6 +91,7 @@ src/gui/widgets/minimap.cpp
 src/gui/widgets/multi_page.cpp
 src/gui/widgets/panel.cpp
 src/gui/widgets/password_box.cpp
+src/gui/widgets/progress_bar.cpp
 src/gui/widgets/repeating_button.cpp
 src/gui/widgets/scrollbar_container.cpp
 src/gui/widgets/scrollbar.cpp
